# chat-streamer

./: .gitignore  README.md
.devcontainer/: Dockerfile  bashrc  devcontainer.json
api/: Cargo.toml
api/src/: main.rs
api/src/utils/: version.rs
